grid layout example

--- a/css - practice/practice1.html
+++ b/css - practice/practice1.html
@@ -57,14 +57,14 @@
     <fieldset>
       <legend>Register your interest</legend>
       <p>
-        <labelfor="name">Your name:</label>
+        <label for="name" class="title">Your name:</label>
         <input type="text" name="name" id="name"><br />
-        <labelfor="email">Your email:</label>
+        <label for="email" class="title">Your email:</label>
         <input type="text" name="email" id="email">
       </p>
 
       <p>
-        <label for="location">Your closest center:</label>
+        <label for="location" class="title">Your closest center:</label>
         <select name="location" id="location">
           <option value="ny">New York</option>
           <option value="il">Chicago</option>
